# fallout-new-vegas-headtracking

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md  launcher-manifest.json  pixi.toml
.github/workflows/: build.yml  release.yml
config/: HeadTracking.ini
nvse/nvse/: GameAPI.h  PluginAPI.h
scripts/: deploy.ps1  fast-launch.ps1  install.cmd  install.ps1  package-release.ps1  release-nightly.ps1  release.ps1  show-changelog.ps1  uninstall.cmd  uninstall.ps1  unrelease.ps1  update-deps.ps1  validate-release.ps1  vanilla.ps1
src/: camera_controller.cpp  camera_controller.h  config.cpp  config.h  d3d9_crosshair.cpp  d3d9_culling.cpp  d3d9_hook.cpp  d3d9_hook.h  d3d9_internal.h  debug_log.h  game_offsets.h  game_state.cpp  game_state.h  hotkey_handler.cpp  hotkey_handler.h  main.cpp  plugin.cpp  plugin.h  tracking_data.h  udp_receiver.cpp  udp_receiver.h  version.h  window_centering.cpp  window_centering.h
